Add separate models for requests
